big progress on report; comments on correlators data; minor modifications on coee

--- a/Report/misc/bibliography.bib
+++ b/Report/misc/bibliography.bib
@@ -82,6 +82,22 @@
 	abstract = {We calculate the bulk and boundary parts of the free energy for an open spin-1/2 XXZ-chain in the critical regime by bosonization. We identify the cut-off independent contributions and determine their amplitudes by comparing with Bethe ansatz calculations at zero temperature T. For the bulk part of the free energy we find agreement with Lukyanov’s result (1998 Nucl. Phys. B 522 533). In the boundary part we obtain a cut-off independent term which is linear in T  and determines the temperature dependence of the boundary susceptibility in the attractive regime for . We further show that at particular anisotropies where contributions from irrelevant operators with different scaling dimensions cross, logarithmic corrections appear. We give explicit formulae for these terms at those anisotropies where they are most important. We verify our results by comparing with extensive numerical calculations based on a numerical solution of the T = 0  Bethe ansatz equations, the finite temperature Bethe ansatz equations in the quantum transfer matrix formalism, and the density matrix renormalization group applied to transfer matrices.}
 }
 
+@article{
+	miranda2003introduction,
+	title={Introduction to bosonization},
+	volume={33},
+	ISSN={0103-9733},
+	url={https://doi.org/10.1590/S0103-97332003000100002},
+	DOI={10.1590/S0103-97332003000100002},
+	number={1},
+	journal={Brazilian Journal of Physics},
+	publisher={Sociedade Brasileira de Física},
+	author={Miranda, E.},
+	year={2003},
+	month={Mar},
+	pages={3–35}
+}
+
 @inproceedings{senechal1999introduction,
 	author = "Senechal, David",
 	title = "{An Introduction to bosonization}",
