--- a/Report/misc/packages.tex
+++ b/Report/misc/packages.tex
@@ -5,7 +5,7 @@
 
 \usepackage{booktabs}
 \usepackage{caption}
-\usepackage{subcaption}
+\usepackage[labelformat=simple]{subcaption}
 \usepackage{multirow}
 \usepackage{geometry}
 
@@ -27,7 +27,7 @@
 	colorlinks=true,
 	urlcolor=tabblue,
 	linkcolor=tabblue,
-	citecolor=tabgreen
+	citecolor=tabblue
 }
 
 \usepackage[citestyle=numeric-comp]{biblatex}
